--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -8,6 +8,7 @@
     font-family: unquote($font-monospace);
     font-weight: 300;
     text-align: left;
+
   }
 
   pre,
@@ -23,6 +24,14 @@
     word-spacing: normal;
     word-wrap: break-word;
     // sass-lint:enable no-vendor-prefixes property-sort-order
+  }
+
+  code {
+    pre & {
+      // inside pre, code does not behave as an inline element;
+      // To ensure multiple lines adhere to the baseline grid, we need to make it a block element.
+      display: inline-block;
+    }
   }
 
   pre {
