--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -8,7 +8,6 @@
     font-family: unquote($font-monospace);
     font-weight: 300;
     text-align: left;
-
   }
 
   pre,
@@ -28,7 +27,7 @@
 
   code {
     pre & {
-      // inside pre, code does not behave as an inline element;
+      // Inside pre, code does not behave as an inline element;
       // To ensure multiple lines adhere to the baseline grid, we need to make it a block element.
       display: inline-block;
     }
