--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -87,12 +87,12 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     position: absolute;
 
     & + label {
-      margin-bottom: $spv-outer--small-scaleable + $spv-nudge-compensation;
       padding-left: $sph-inner + $box-size;
       position: relative;
 
       &::before,
       &::after {
+        @include vf-animation(all, brisk);
         position: absolute;
       }
 
@@ -159,10 +159,11 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
   }
 
   label {
-    @extend %default-text;
     cursor: pointer;
     display: block;
+    margin-top: 0;
     margin-bottom: $spv-outer--small + $spv-nudge-compensation;
+    padding-top: map-get($nudges, nudge--p);
     width: fit-content;
 
     &.is-required::after {
@@ -226,11 +227,6 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     @extend %vf-tick-elements;
 
     & + label {
-      &::before,
-      &::after {
-        transition: background-color 0.1s;
-      }
-
       &::before {
         border-radius: $border-radius;
       }
@@ -261,25 +257,33 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
 
   [type='radio'] {
     @extend %vf-tick-elements;
-    $inner-circle-diameter: 0.65rem;
+    $inner-circle-diameter: 6px;
 
     & + label {
-      &::before {
+      &::before,
+      &::after {
         border-radius: 50%;
       }
 
       &::after {
-        background-color: $color-information;
+        background-color: $color-x-light;
         border-radius: 50%;
         height: $inner-circle-diameter;
-        left: ($box-size - $inner-circle-diameter) * 0.5;
-        top: calc(#{$box-offset-top + ($box-size - $inner-circle-diameter) * 0.5} - 1px * 0.5);
+        left: calc(#{$box-size * 0.5} - #{$inner-circle-diameter * 0.5});
+        top: calc(#{$box-offset-top + $box-size * 0.5} - #{$inner-circle-diameter * 0.5});
         width: $inner-circle-diameter;
       }
     }
 
-    &:checked + .is-inline-label::after {
-      top: calc(#{($box-size - $inner-circle-diameter) * 0.5});
+    &:checked {
+      & + label::before {
+        background-color: $color-information;
+        border-color: $color-information;
+      }
+
+      & + .is-inline-label::after {
+        top: calc(#{$box-size * 0.5} - #{$inner-circle-diameter * 0.5});
+      }
     }
   }
 
