update tick element example file

--- a/examples/templates/tick-element-comparison.html
+++ b/examples/templates/tick-element-comparison.html
@@ -19,18 +19,14 @@ category: _templates
       <label for="Radio2">Radio option 2</label>
     </div>
     <div class="col-3">
-      <input type="radio" name="RadioOptions" id="Radio1" value="option1" >
-      <label for="Radio1">Radio option 1</label>
-      <input type="radio" name="RadioOptions" id="Radio2" value="option2">
-      <label for="Radio2">Radio option 2</label>
-      <input type="checkbox" id="checkExample1" checked>
-      <label for="checkExample1">Checkbox option 1</label>
-      <input type="checkbox" id="checkExample2">
-      <label for="checkExample2">Checkbox option 2</label>
-    </div>
-    <div class="col-3">
-      <p>Paragraph</p>
-      <button>Button</button>
+      <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
+      <label for="Radio3">Radio option 3</label>
+      <input type="radio" name="RadioOptions" id="Radio4" value="option4">
+      <label for="Radio4">Radio option 4</label>
+      <input type="checkbox" id="checkExample3" checked>
+      <label for="checkExample3">Checkbox option 3</label>
+      <input type="checkbox" id="checkExample4">
+      <label for="checkExample4">Checkbox option 4</label>
     </div>
   </div>
 </div>
@@ -47,8 +43,8 @@ category: _templates
         <tr>
           <th>
             <form>
-              <input type="checkbox" id="checkExample1" checked="">
-              <label for="checkExample1" class="is-inline-label">lbl</label>
+              <input type="checkbox" id="checkExample99" checked="">
+              <label for="checkExample99" class="is-inline-label">label</label>
             </form>
           </th>
           <th>Power</th>
@@ -65,7 +61,7 @@ category: _templates
           <th aria-label="FQDN | MAC">
             <form>
               <input type="checkbox" id="checkExample1" checked="">
-              <label for="checkExample1" class="is-inline-label">lbl</label>
+              <label for="checkExample1" class="is-inline-label">label</label>
             </form>
           </th>
           <td aria-label="Power">Off</td>
@@ -79,8 +75,8 @@ category: _templates
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
-              <label for="Radio1" class="is-inline-label">lbl</label>
+              <input type="radio" name="RadioOptions" id="Radio10" value="option1" checked>
+              <label for="Radio10" class="is-inline-label">label</label>
             </form>
           </th>
           <td aria-label="Power">Off</td>
