move label rule from typography file to forms where the rest of the label rules are

--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -159,6 +159,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
   }
 
   label {
+    @include p-max-width;
     cursor: pointer;
     display: block;
     margin-top: 0;
