compare line-height drift over 10000 lines

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -115,14 +115,14 @@
     line-height: map-get($line-heights, default-text);
     margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
     margin-top: 0;
-    padding-top: map-get($nudges, nudge--p);
+    padding-top: map-get($nudges, nudge--p) + 0.0015;
   }
 
   %default-text {
     line-height: map-get($line-heights, default-text);
     margin-bottom: map-get($sp-after, default-text) - map-get($nudges, nudge--p);
     margin-top: 0;
-    padding-top: map-get($nudges, nudge--p);
+    padding-top: map-get($nudges, nudge--p) + 0;
   }
 
   %paragraph {
