--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -8,6 +8,6 @@ $increase-fontsize-on-bigger-screens: true !default;
 $fontsize-ratio--largescreen: 1.125 !default;
 $fontsize-largescreen: 1rem * $fontsize-ratio--largescreen;
 $fontsizes: (
-  base: 16px,
+  base: 1rem,
   big: $fontsize-largescreen
 ) !default;
