--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -6,7 +6,7 @@ $font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
 $font-allow-cyrillic-greek-latin: false !default;
 $increase-fontsize-on-bigger-screens: true !default;
 $fontsize-ratio--largescreen: 1.125 !default;
-$fontsize-largescreen: 1rem * $fontsize-ratio--largescreen;
+$fontsize-largescreen: #{$fontsize-ratio--largescreen}rem;
 $fontsizes: (
   base: 1rem,
   big: $fontsize-largescreen
