--- a/examples/templates/typographic-spacing.html
+++ b/examples/templates/typographic-spacing.html
@@ -123,7 +123,7 @@ category: _templates
                     this.numParagraphs = 1000;
                 }
                 appendP(parent, i) {
-                    var para = document.createElement('p'),
+                    var para = document.createElement('h3'),
                         rowNum = "<strong># " + arguments[1] + "</strong>",
                         lorem = " Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.";
 
