--- a/scss/_patterns_notifications.scss
+++ b/scss/_patterns_notifications.scss
@@ -39,7 +39,7 @@
 
     &__response {
       @extend %default-text;
-      background-position: $sph-inner $spv-inner--x-small--scaleable + $spv-nudge + 0.5 * (map-get($line-heights, default-text) - map-get($icon-sizes, default));
+      background-position: $sph-inner $spv-inner--x-small--scaleable + $spv-nudge + 0.5 * (#{map-get($line-heights, default-text)} * $sp-unit - map-get($icon-sizes, default));
       background-repeat: no-repeat;
       background-size: map-get($icon-sizes, default);
       padding: $spv-inner--x-small--scaleable + $spv-nudge $sph-inner $spv-inner--x-small--scaleable;
