add classes to reset margin of first-column per breakpoint

--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -29,3 +29,21 @@ $shelves-column-name: $grid-col-name;
     padding: $spv-inner--small $sph-inner--small;
   }
 }
+
+.col-first--desktop {
+  @media (min-width: $breakpoint-medium) {
+    margin-left: 0;
+  }
+}
+
+.col-first--tablet {
+  @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
+    margin-left: 0;
+  }
+}
+
+.col-first--mobile {
+  @media (max-width: $breakpoint-small) {
+    margin-left: 0;
+  }
+}
