--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -30,20 +30,20 @@ $shelves-column-name: $grid-col-name;
   }
 }
 
-.col-first--desktop {
-  @media (min-width: $breakpoint-medium) {
+.u-first-col--mobile {
+  @media (max-width: $breakpoint-small) {
     margin-left: 0;
   }
 }
 
-.col-first--tablet {
+.u-first-col--tablet {
   @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
     margin-left: 0;
   }
 }
 
-.col-first--mobile {
-  @media (max-width: $breakpoint-small) {
+.u-first-col--desktop {
+  @media (min-width: $breakpoint-medium) {
     margin-left: 0;
   }
 }
