undo authomatic quote conversion

--- a/scss/grid/shelves-grid.scss
+++ b/scss/grid/shelves-grid.scss
@@ -1,7 +1,7 @@
 @import './shelves/functions';
 @import './shelves/variables';
 @import './shelves/mixins';
-@import '../utilities_grid';
+@import 'utilities_grid';
 
 @mixin vf-p-grid {
   @include shelves-base;
