add documentation for grid first col  classes

--- a/scss/_utilities_grid.scss
+++ b/scss/_utilities_grid.scss
@@ -1,17 +1,17 @@
 @mixin grid-first-col {
-  .u-first-col--mobile {
+  .u-first-col--small {
     @media (max-width: $breakpoint-small) {
       margin-left: 0;
     }
   }
 
-  .u-first-col--tablet {
+  .u-first-col--medium {
     @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
       margin-left: 0;
     }
   }
 
-  .u-first-col--desktop {
+  .u-first-col--large {
     @media (min-width: $breakpoint-medium) {
       margin-left: 0;
     }
