--- a/examples/templates/logo-strip.html
+++ b/examples/templates/logo-strip.html
@@ -5,7 +5,7 @@ category: _templates
 ---
 
 <div class="row">
-    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--tablet u-first-col--desktop">
+    <div class="mobile-col-1 tablet-col-1 col-2">
         <img src="https://assets.ubuntu.com/v1/4c6fb640-logo-verizon.png" alt="verizon logo">
     </div>
     <div class="mobile-col-1 tablet-col-1 col-2">
@@ -17,19 +17,19 @@ category: _templates
     <div class="mobile-col-1 tablet-col-1 col-2">
         <img src="https://assets.ubuntu.com/v1/01158ac3-logo-riot-games.png" alt="riot games logo">
     </div>
-    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--mobile">
+    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--small">
         <img src="https://assets.ubuntu.com/v1/ab9074df-logo-tele2.png" alt="tele2 logo">
     </div>
     <div class="mobile-col-1 tablet-col-1 col-2">
         <img src="https://assets.ubuntu.com/v1/589418ac-logo-telecom-italia.png" alt="telecom italia logo">
     </div>
-    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--tablet u-first-col--desktop">
+    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--medium u-first-col--large">
         <img src="https://assets.ubuntu.com/v1/56c03384-logo-nec.png" alt="nec logo">
     </div>
     <div class="mobile-col-1 tablet-col-1 col-2">
         <img src="https://assets.ubuntu.com/v1/d2b3609c-logo-scania.png" alt="scania logo">
     </div>
-    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--mobile">
+    <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--small">
         <img src="https://assets.ubuntu.com/v1/c6f4a7ea-logo-radobank.png" alt="radobank logo">
     </div>
     <div class="mobile-col-1 tablet-col-1 col-2">
