add clear left on first columns; update example

--- a/scss/_utilities_grid.scss
+++ b/scss/_utilities_grid.scss
@@ -1,18 +1,21 @@
 @mixin grid-first-col {
   .u-first-col--small {
     @media (max-width: $breakpoint-small) {
+      clear: left;
       margin-left: 0;
     }
   }
 
   .u-first-col--medium {
     @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
+      clear: left;
       margin-left: 0;
     }
   }
 
   .u-first-col--large {
     @media (min-width: $breakpoint-medium) {
+      clear: left;
       margin-left: 0;
     }
   }
