--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -6,8 +6,8 @@ $grid-columns: 12 !default;
 $grid-columns-mobile: 4 !default;
 $grid-columns-tablet: 6 !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-mobile-col-prefix: 'mobile-col-';
-$grid-tablet-col-prefix: 'tablet-col-';
+$grid-mobile-col-prefix: 'small-col-';
+$grid-tablet-col-prefix: 'medium-col-';
 $grid-desktop-col-prefix: 'col-';
 
 //kept for comparison
