--- a/docs/examples/templates/vertical-spacing.html
+++ b/docs/examples/templates/vertical-spacing.html
@@ -22,7 +22,7 @@ category: _templates
           </li>
         </ul>
       </div>
-      <div class="col-8 prefix-2 u-vertically-center">
+      <div class="col-8 col-start-large-2 u-vertically-center">
         <img src="https://assets.ubuntu.com/v1/4a810e12-guidelines-illustration.svg" alt="">
       </div>
     </div>
