--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -8,6 +8,8 @@
   }
 
   .p-divider__block {
+    position: relative;
+
     @media (max-width: $breakpoint-medium) {
       padding-bottom: $spv-outer--scaleable;
 
@@ -24,7 +26,7 @@
         border-left: 1px solid $color-mid-light;
         bottom: $sp-unit; // compensate for bottom margin on children
         content: '';
-        left: -1.5rem;
+        left: map-get($grid-gutter-widths, large) * -0.5; // "large" here is not a typo. The grid switches to 12 columns at breakpoint medium. Hence the use of large-screen gutter
         position: absolute;
         top: $sp-unit;
       }
