Add stacked variant for form input groups

--- a/scss/_patterns_forms.scss
+++ b/scss/_patterns_forms.scss
@@ -48,6 +48,14 @@
       }
     }
   }
+
+  .p-form--stacked .p-form__group.is-stacked {
+    display: block;
+
+    .p-form__label {
+      @extend %default-text;
+    }
+  }
 }
 
 @mixin vf-p-forms-inline {
