--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -1,34 +1,37 @@
 @import 'settings';
 
 @mixin vf-p-divider {
-  .p-divider {
-    @media (min-width: $breakpoint-medium) {
-      display: flex;
-    }
-  }
-
   .p-divider__block {
     position: relative;
 
-    @media (max-width: $breakpoint-medium) {
+    @media (max-width: $threshold-6-12-col) {
       padding-bottom: $spv-outer--scaleable;
+      padding-top: $spv-inner--scaleable;
 
       &:not(:first-child) {
-        border-top: 1px solid $color-mid-light;
-        padding-top: calc(#{$spv-inner--scaleable} - 1px); // border compensation
+        &::before {
+          content: '';
+          background-color: $color-mid-light;
+          height: 1px;
+          left: 0;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
       }
     }
 
-    @media (min-width: $breakpoint-medium) {
+    @media (min-width: $threshold-6-12-col) {
       padding-right: 1rem;
 
       &:not(:nth-child(1))::before {
-        border-left: 1px solid $color-mid-light;
+        background-color: $color-mid-light;
         bottom: $sp-unit; // compensate for bottom margin on children
         content: '';
         left: map-get($grid-gutter-widths, large) * -0.5; // "large" here is not a typo. The grid switches to 12 columns at breakpoint medium. Hence the use of large-screen gutter
         position: absolute;
         top: $sp-unit;
+        width: 1px;
       }
 
       &:last-child {
