--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -53,7 +53,7 @@ hr {
       position: relative;
 
       &::before {
-        background-color: $color-mid-light;
+        background-color: $color-accent;
         bottom: -$spv-inner--x-small;
         content: '';
         left: -$sph-inner;
