decrease scope of selector to make only direct  children of .row  span 12 cols

--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -73,7 +73,7 @@
       grid-gap: 0 map-get($grid-gutter-widths, small);
       grid-template-columns: repeat($grid-columns-small, minmax(0, 1fr));
 
-      * {
+      & > * {
         grid-column-end: span $grid-columns-small;
       }
     }
@@ -82,7 +82,7 @@
       grid-gap: 0 map-get($grid-gutter-widths, medium);
       grid-template-columns: repeat($grid-columns-medium, minmax(0, 1fr));
 
-      * {
+      & > * {
         grid-column-end: span $grid-columns-medium;
       }
     }
@@ -91,7 +91,7 @@
       grid-gap: 0 map-get($grid-gutter-widths, large);
       grid-template-columns: repeat($grid-columns, minmax(0, 1fr));
 
-      * {
+      & > * {
         grid-column-end: span $grid-columns;
       }
     }
