Make p-card's spacing rules less greedy

--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -79,9 +79,9 @@
   }
 
   [class*='p-card'] {
-    p:not([class^='p-heading--']),
-    h5,
-    h6 {
+    > p:not([class^='p-heading--']),
+    > h5,
+    > h6 {
       &:last-child {
         margin-bottom: $spv-nudge-compensation;
       }
